Expanding tails & knuckles movesets.

--- a/app/controller/kb-input.html
+++ b/app/controller/kb-input.html
@@ -1,9 +1,1 @@
-[[dpadView]]
-<!-- [[wasdView]] -->
-[[aView]]
-[[bView]]
-[[xView]]
-[[yView]]
-[[lrView]]
-[[raView]]
-[[startView]]
+<section cv-each = "lines:line">[[line]]</section>
