--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -312,10 +312,10 @@
 					<div class = "char-icon [[charName|hyphenate]]"></div>
 				</div>
 				<div class = "emblem-hud" cv-each = "emblems:emblem:e">
-					<img src = "/custom/hud-emblem.png" class = "[[emblem.existing]]" />
+					<img loading="lazy" src = "/custom/hud-emblem.png" class = "[[emblem.existing]]" />
 				</div>
 				<div class = "emerald-hud" cv-each = "emeralds:emerald:e">
-					<img src = "/Sonic/emerald-[[emerald]]-mini.png" />
+					<img loading="lazy" src = "/Sonic/emerald-[[emerald]]-mini.png" />
 				</div>
 			</div>
 
