--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -205,7 +205,7 @@
  				<div class = "debug-spawn">[[debugObjectName]]</div>
  			</div>
 
-			 <div class = "hud now-loading"></div>
+			<div class = "hud now-loading"></div>
 
 			<div class = "hud hud-top-right hud-table combo-table">
 				<span cv-if = "showCombo">
@@ -310,7 +310,7 @@
 			<div class = "hud hud-top-right" cv-if = "showHud">
 
 				<div class = "char-hud">
-					[[char]]
+					[[prompt]] [[char]]
 					<div class = "char-icon [[charName|hyphenate]]"></div>
 				</div>
 				<div>
