--- a/app/Menu/menu.html
+++ b/app/Menu/menu.html
@@ -3,7 +3,7 @@
 	[[warp]]
 	<div class = "menu-container" data-current-menu = "[[currentKey]]">
 		<ul cv-ref = "bound" cv-each = "items:item:title">
-			<li data-title = "[[title]]" class = "[[item.available]]" cv-on = "click:run(item, event);cvDomDetached:removeItem(item);focus:handleFocus(event)" tabindex="0">
+			<li data-title = "[[title]]" class = "[[item.available]]" data-type = "[[item.input]]" data-sub-type = "[[item.subType]]" cv-on = "click:run(item, event);cvDomDetached:removeItem(item);focus:handleFocus(event)" tabindex="0">
 				<span class = "title">[[item._title]]</span>
 				<span class = "subtext">[[item.subtext]]</span>
 				<span cv-if = "item.input" cv-is = "output">
@@ -13,13 +13,10 @@
 					: <span data-wraps = "string"><input cv-ref = "string" cv-bind = "item.setting" cv-on = "keyup(event);input:change(event)" tabindex="-1" /></span>
 				</span>
 				<span cv-if = "item.input" cv-is = "number">
-					: <span data-wraps = "number"><input cv-ref = "number" cv-bind = "item.setting" type = "number" cv-on = "keyup(event);change(event)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" step = "[[item.step]]" /></span>
-				</span>
-				<span cv-if = "item.input" cv-is = "range">
-					: <span data-wraps = "range"><input cv-ref = "range" cv-bind = "item.setting" type = "range" cv-on = "keyup(event);change(event)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" step = "[[item.step]]" /></span>
+					: <span data-wraps = "number"><input cv-ref = "number" cv-bind = "item.setting" type = "[[item.subType]]" cv-on = "keyup(event);change(event)" tabindex="-1" max = "[[item.max]]" min = "[[item.min]]" step = "[[item.step]]" title = "[[item.setting]]" /></span>
 				</span>
 				<span cv-if = "item.input" cv-is = "boolean">
-					: <span data-wraps = "select"><select cv-on = "click:toggle(event,item);mousedown:cancel(event);change(event)" cv-ref = "boolean" cv-bind = "item.setting" tabindex="-1">
+					: <span data-wraps = "select"><select cv-on = "mousedown:cancel(event);change(event)" cv-ref = "boolean" cv-bind = "item.setting" tabindex="-1">
 						<option value = "1">on</option>
 						<option value = "0">off</option>
 					</select></span>
