Manic Harbor 2 Knuckles path

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -1,6 +1,6 @@
 <section class = "filters" cv-each = "effects:effect">[[effect]]</section>
 
-<div class = "viewport-frame [[initializing]] [[standalone]] [[secret]] [[level]] [[noIntro]] [[inputType]] [[ntsc]] [[windowFocused]]" data-theme = "[[theme]]" data-bg = "[[bg]]" cv-ref = "frame" data-paused = "[[paused]]" data-smoothing = [[smoothing]] data-character = "[[selectedChar]]" data-loading-map = "[[loadingMap]]" cv-on = "mousedown:interact:c;keydown:interact:c;">
+<div class = "viewport-frame [[initializing]] [[standalone]] [[secret]] [[level]] [[noIntro]] [[inputType]] [[ntsc]] [[windowFocused]]" data-theme = "[[theme]]" data-bg = "[[bg]]" data-agent = "[[agent]]" cv-ref = "frame" data-paused = "[[paused]]" data-smoothing = [[smoothing]] data-character = "[[selectedChar]]" data-loading-map = "[[loadingMap]]" cv-on = "mousedown:interact:c;keydown:interact:c;">
 	<div class = "viewport [[standalone]] [[fullscreen]] displacement-[[displacement]] mouse-[[mouse]] [[theme]] [[hideNowPlaying]] [[hiddenNowPlaying]] [[invert]]" cv-ref = "viewport" tabindex="0" cv-on = "click;mousemove;mousedown;mouseup;">
 
 		<svg height="32" width="32">
