--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -165,37 +165,39 @@
 
 			<div class = "backdrops" cv-ref ="backdrops"></div>
 
-			<div class = "blurAngle" cv-ref = "blurAngle">
-			<div class = "blurDistance" cv-ref = "blurDistance">
-			<div class = "blurAngleCancel" cv-ref = "blurAngleCancel">
-				<div
-					cv-ref  = "background"
-					class   = "viewport-bg-layers"
-					cv-each = "layers:layer"
-				>[[layer]]</div>
-			</div>
-			</div>
-			</div>
+			<div class = "viewport-tilt" cv-ref = "tilt">
+				<div class = "blurAngle" cv-ref = "blurAngle">
+				<div class = "blurDistance" cv-ref = "blurDistance">
+				<div class = "blurAngleCancel" cv-ref = "blurAngleCancel">
+					<div
+						cv-ref  = "background"
+						class   = "viewport-bg-layers"
+						cv-each = "layers:layer"
+					>[[layer]]</div>
+				</div>
+				</div>
+				</div>
 
-			<div class = "filters filters-background" cv-ref = "bgFilters"></div>
+				<div class = "filters filters-background" cv-ref = "bgFilters"></div>
 
-			<div cv-ref = "content" class = "viewport-content">
-				<div cv-ref = "actors" class = "viewport-actors"></div>
-				<div cv-ref = "particles" class = "viewport-particles"></div>
- 			</div>
+				<div cv-ref = "content" class = "viewport-content">
+					<div cv-ref = "actors" class = "viewport-actors"></div>
+					<div cv-ref = "particles" class = "viewport-particles"></div>
+				</div>
 
-			<div class = "blurAngle" cv-ref = "blurAngleFg">
-			<div class = "blurDistance" cv-ref = "blurDistanceFg">
- 			<div class = "blurAngleCancel" cv-ref = "blurAngleCancelFg">
-				<div
-					cv-ref  = "foreground"
-					class   = "viewport-bg-layers"
-					cv-each = "fgLayers:layer"
-				>[[layer]]</div>
+				<div class = "blurAngle" cv-ref = "blurAngleFg">
+				<div class = "blurDistance" cv-ref = "blurDistanceFg">
+				<div class = "blurAngleCancel" cv-ref = "blurAngleCancelFg">
+					<div
+						cv-ref  = "foreground"
+						class   = "viewport-bg-layers viewport-fg-layers"
+						cv-each = "fgLayers:layer"
+					>[[layer]]</div>
+				</div>
+				</div>
+				</div>
 			</div>
-			</div>
-			</div>
- 		</div>
+		</div>
 
  		[[plot]]
 
